[gd_scene load_steps=17 format=2]

[ext_resource path="res://Battle/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Battle/Battle/PlayerStats.gd" type="Script" id=2]
[ext_resource path="res://Backgrounds/TestBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Mobile RPG Mockup.png" type="Texture" id=4]
[ext_resource path="res://Images/UI/Heart.png" type="Texture" id=5]
[ext_resource path="res://Battle/Battle/StatsPanel.gd" type="Script" id=6]
[ext_resource path="res://Battle/Battle/BashActionButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Battle/Battle/HealActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Battle/Battle/Centipede.tscn" type="PackedScene" id=9]
[ext_resource path="res://Images/UI/Sword.png" type="Texture" id=10]
[ext_resource path="res://Images/UI/Staff.png" type="Texture" id=11]
[ext_resource path="res://Battle/Bash/Bash.tscn" type="PackedScene" id=12]
[ext_resource path="res://Battle/Heal/Heal.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )
enemies = [ ExtResource( 9 ) ]
Bash = ExtResource( 12 )
Heal = ExtResource( 13 )
background = ExtResource( 3 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Background" type="Node" parent="."]

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 77, 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy" parent="EnemyPosition" instance=ExtResource( 9 )]
position = Vector2( 226, 108 )

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.282353 )
position = Vector2( 45, 80 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_left = 32.0
margin_right = 122.0
margin_bottom = 50.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = -98.0
margin_top = 1.0
margin_right = 188.0
margin_bottom = 49.0
rect_min_size = Vector2( 70, 13 )
text = "Enter Next Room"

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 6.0
margin_top = 7.0
margin_right = 95.0
margin_bottom = 125.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="VBoxContainer" parent="UI/StatsPanel"]
margin_left = 36.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 113.0
custom_constants/separation = -3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_right = 44.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "25"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 37.0
margin_right = 44.0
margin_bottom = 77.0
size_flags_horizontal = 3
text = "3"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 74.0
margin_right = 44.0
margin_bottom = 114.0
size_flags_horizontal = 3
text = "10"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HeartStatSprite" type="Sprite" parent="UI/StatsPanel"]
position = Vector2( 21, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SwordStatSprite" type="Sprite" parent="UI/StatsPanel"]
position = Vector2( 21, 56 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaffStatSprite" type="Sprite" parent="UI/StatsPanel"]
position = Vector2( 21, 92 )
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextboxPanel" type="Panel" parent="UI"]
visible = false
margin_left = 145.0
margin_top = 70.0
margin_right = 481.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 24.0
custom_styles/normal = SubResource( 1 )
custom_constants/table_vseparation = 0
custom_constants/line_separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 158.0
margin_top = 270.0
margin_right = 464.0
margin_bottom = 318.0
custom_constants/vseparation = 3
custom_constants/hseparation = 112
columns = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BashActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 7 )]
margin_right = 88.0
margin_bottom = 48.0

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 48.0

[node name="BattleTextPanel" type="Panel" parent="UI"]
visible = false
margin_left = 78.0
margin_top = 257.0
margin_right = 552.0
margin_bottom = 340.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BattleTextbox" type="RichTextLabel" parent="UI/BattleTextPanel"]
margin_left = 14.0
margin_top = 10.0
margin_right = 460.0
margin_bottom = 74.0
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]my centered text hereasdfasdfasdf[/center]"
text = "my centered text hereasdfasdfasdf"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MiniGamePosition" type="Position2D" parent="."]
position = Vector2( 311, 295 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 3 )

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/BashActionButton" to="." method="_on_BashActionButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/HealActionButton" to="." method="_on_HealActionButton_pressed"]
